--- a/aws/PAS-Component-Single-Deployment.yaml
+++ b/aws/PAS-Component-Single-Deployment.yaml
@@ -836,7 +836,7 @@ Resources:
                     /opt/CD-Image/register_and_activation.sh
                     Administrator "${VaultAdminPassword}" "${VaultIpAddress}" $(curl
                     http://169.254.169.254/latest/meta-data/instance-id) ec2-user
-                  - VaultIpAddress: !Sub '${VaultMachine.PrivateIp},${VaultDRMachine.PrivateIp}'
+                  - VaultIpAddress: !Sub '${VaultPrivateIP},${DRPrivateIP}'
             02-PostInstall:
               command: sudo rm -rf /opt/CD-Image/
             99-SignalCompletion:
