--- a/aws/PAS-Component-Single-Deployment.yaml
+++ b/aws/PAS-Component-Single-Deployment.yaml
@@ -669,7 +669,7 @@ Resources:
           #!/bin/bash -e
 
           /opt/aws/bin/cfn-init -v --stack ${AWS::StackName} --resource
-          PSMPMachine --configsets ascending --region ${AWS::Region}
+          PSMPMachine --configsets install_all --region ${AWS::Region}
 
           /opt/aws/bin/cfn-signal -e $? --stack ${AWS::StackName} --resource
           PSMPMachine --region ${AWS::Region}
@@ -678,117 +678,86 @@ Resources:
     Metadata:
       'AWS::CloudFormation::Init':
         configSets:
-          ascending:
-            - update_ssmagent
-            - install_cwlogs
+          install_all:
+            - install_logs
             - install_psmp
-        update_ssmagent:
-          commands:
-            01_download_ssmagent_update:
-              command: >-
-                sudo yum install -y
-                https://s3.amazonaws.com/ec2-downloads-windows/SSMAgent/latest/linux_amd64/amazon-ssm-agent.rpm
-              ignoreErrors: true
-              waitAfterCompletion: 0
-        install_cwlogs:
+        install_logs:
           files:
-            /etc/awslogs/awslogs.conf:
+            /opt/aws/amazon-cloudwatch-agent/bin/config.json:
               content: !Sub |
-                [general]
-                state_file= /var/lib/awslogs/state/agent-state
-                [/var/log/cloud-init.log]
-                file = /var/log/cloud-init.log
-                log_group_name = ${LogGroup}
-                log_stream_name = {instance_id}/cloud-init.log
-                datetime_format =
-                [/var/log/cloud-init-output.log]
-                file = /var/log/cloud-init-output.log
-                log_group_name = ${LogGroup}
-                log_stream_name = {instance_id}/cloud-init-output.log
-                datetime_format =
-                [/var/log/cfn-init.log]
-                file = /var/log/cfn-init.log
-                log_group_name = ${LogGroup}
-                log_stream_name = {instance_id}/cfn-init.log
-                datetime_format =
-                [/var/log/cfn-wire.log]
-                file = /var/log/cfn-wire.log
-                log_group_name = ${LogGroup}
-                log_stream_name = {instance_id}/cfn-wire.log
-                datetime_format =
-              mode: '000444'
-              owner: root
-              group: root
-            /etc/awslogs/awscli.conf:
-              content: !Sub |
-                [plugins]
-                cwlogs = cwlogs
-                [default]
-                region = ${AWS::Region}
+                {
+                  "agent": {
+                    "metrics_collection_interval": 10,
+                    "logfile": "/opt/aws/amazon-cloudwatch-agent/logs/amazon-cloudwatch-agent.log",
+                    "run_as_user": "root"
+                  },
+                  "logs": {
+                    "logs_collected": {
+                      "files": {
+                        "collect_list": [
+                          {
+                            "file_path": "/var/log/cloud-init.log",
+                            "log_group_name": "${LogGroup}",
+                            "log_stream_name": "PSMSSHMachine/cloud-init",
+                            "timezone": "Local",
+                            "timestamp_format": "%Y-%m-%dT%H:%M:%S"
+                          },
+                          {
+                            "file_path": "/var/log/cloud-init-output.log",
+                            "log_group_name": "${LogGroup}",
+                            "log_stream_name": "PSMSSHMachine/cloud-init-output",
+                            "timezone": "Local",
+                            "timestamp_format": "%Y-%m-%dT%H:%M:%S"
+                          },
+                          {
+                            "file_path": "/var/log/cfn-init.log",
+                            "log_group_name": "${LogGroup}",
+                            "log_stream_name": "PSMSSHMachine/cfn-init",
+                            "timezone": "Local",
+                            "timestamp_format": "%Y-%m-%dT%H:%M:%S"
+                          },
+                          {
+                            "file_path": "/tmp/temp/EnvManager.log",
+                            "log_group_name": "${LogGroup}",
+                            "log_stream_name": "PSMSSHMachine/EnvManager",
+                            "timezone": "Local",
+                            "timestamp_format": "%Y-%m-%dT%H:%M:%S"
+                          },
+                          {
+                            "file_path": "/var/opt/CARKpsmp/temp/PSMPHardening_log.txt",
+                            "log_group_name": "${LogGroup}",
+                            "log_stream_name": "PSMSSHMachine/PSMPHardening_log",
+                            "timezone": "Local",
+                            "timestamp_format": "%Y-%m-%dT%H:%M:%S"
+                          }
+                        ]
+                      }
+                    }
+                  }
+                }
               mode: '000444'
               owner: root
               group: root
           commands:
-            01_create_state_directory:
-              command: mkdir -p /var/lib/awslogs/state
-              waitAfterCompletion: 0
-            02_start_awslogsd:
-              command: systemctl start awslogsd
-            03_enable_awslogsd:
-              command: systemctl enable awslogsd
+            01_install_cwlogs:
+              command: yum install -y https://s3.amazonaws.com/amazoncloudwatch-agent/redhat/amd64/latest/amazon-cloudwatch-agent.rpm
+            02_start_awslogs:
+              command: sudo /opt/aws/amazon-cloudwatch-agent/bin/amazon-cloudwatch-agent-ctl -a fetch-config -m ec2 -c file:/opt/aws/amazon-cloudwatch-agent/bin/config.json -s
         install_psmp:
-          files:
-            /root/CD-Image/preinstall.sh:
-              content: |-
-                #!/bin/bash -e
-
-                hostname $1
-
-                sed -i "s/localhost\\./$1./g" /etc/hosts
-
-                sed -i "s/localhost /$1 /g" /etc/hosts
-
-                chmod 646 /etc/sysconfig/network
-                sed -i "s/HOSTNAME=localhost.localdomain/HOSTNAME=$1/g" \
-                /etc/sysconfig/network
-
-                chmod 644 /etc/hosts
-
-                chmod 644 /etc/sysconfig/network
-            /root/CD-Image/createCredFile.sh:
-              content: |-
-                #!/bin/bash -e
-                adminpassword=`aws ssm get-parameters --names $2 --region $3 \
-                --with-decryption --output text --query Parameters[0].Value`
-                /opt/CARKpsmp/bin/createcredfile /root/CD-Image/user.cred \
-                Password -Username $1 -Password $adminpassword -EntropyFile
           commands:
-            1-ScriptsPermissions:
-              command: >-
-                sudo chmod 700 /root/CD-Image/preinstall.sh
-                /root/CD-Image/createCredFile.sh
-              waitAfterCompletion: 0
-            2-PreInstall:
-              command: !Sub >
-                sudo /root/CD-Image/preinstall.sh ${ComponentHostName}
-                waitAfterCompletion: 0
-            3-CreateCredFile:
-              command: !Sub >
-                sudo /root/CD-Image/createCredFile.sh ${VaultAdminUser}
-                ${StoreAdminPassword.SsmId} ${AWS::Region} ${ComponentHostName}
-                waitAfterCompletion: 0
-            4-PSMPdeploy:
-              command: !Sub
-                - >-
-                  hostname=`curl
-                  http://169.254.169.254/latest/meta-data/instance-id` &&
-                  /root/CD-Image/register_and_activation.sh
-                  /root/CD-Image/user.cred ${VaultIpAddress} $hostname y
-                - VaultIpAddress: !If
-                    - DRValueEmpty
-                    - !Sub '${VaultPrivateIP}'
-                    - !Sub '${VaultPrivateIP},${DRPrivateIP}'
-              waitAfterCompletion: 0
+            01-PSMPdeploy:
+              command:
+                'Fn::Sub':
+                  - >-
+                    /opt/CD-Image/register_and_activation.sh
+                    Administrator "${VaultAdminPassword}" "${VaultIpAddress}" $(curl
+                    http://169.254.169.254/latest/meta-data/instance-id) ec2-user
+                  - VaultIpAddress: !Sub '${VaultPrivateIP},${DRPrivateIP}'
+            02-PostInstall:
+              command: sudo rm -rf /opt/CD-Image/
+            99-SignalCompletion:
+              command: !Sub >-
+                /opt/aws/bin/cfn-signal -e $? --stack ${AWS::StackId} --resource PSMPMachine --region ${AWS::Region}
     Condition: CreatePSMPCondition
     CreationPolicy:
       ResourceSignal:
@@ -948,7 +917,7 @@ Mappings:
       CPM: ami-0331d6a1ed8a049a8
       PVWA: ami-042941065ee81a59a
       PSM: ami-074fbecca986d1b2b
-      PSMP: ami-0664054848d7e0dbd
+      PSMP: ami-006254b7973a531e2
     eu-west-3:
       CPM: ami-0b264e7217b403c0d
       PVWA: ami-04c4b7bb2b12b04b6
