--- a/aws/Vault-Single-Deployment.yaml
+++ b/aws/Vault-Single-Deployment.yaml
@@ -587,7 +587,7 @@ Parameters:
     NoEcho: true
     AllowedPattern: ^(?=.*[0-9])(?=.*[a-z])(?=.*[A-Z])(?=.*[~!@#$%^&\*\(\)_\-+=:])(?=\S+$).{8,}$|.{0,0}
     ConstraintDescription: if the value isnt empty it must contain at least 1 lowercase letter, 1 uppercase letter, 1 digit and 1 special characters,
-      Minimum 10 characters, Allowed A-Z,a-z,0-9,all special characters, Cannot except / \ - ; and controlled characters.
+      Minimum 10 characters, Allowed A-Z,a-z,0-9,all special characters, except / \ - ; and controlled characters.
   SecretRetype:
     Type: String
     Description: Retype the secret string for the DR User.
@@ -612,7 +612,9 @@ Parameters:
   VaultHostName:
     Type: String
     Description: Enter the host name for the Primary Vault instance.
-    MinLength: 4
+    AllowedPattern: ^([a-zA-Z0-9][a-zA-Z0-9\-.]{2,14})
+    ConstraintDescription:  Hostname must include 3-15 characters, only alphanumeric characters, dashes and dots are allowed.
+    MinLength: 3
   VaultInstanceSecurityGroups:
     Type: List<AWS::EC2::SecurityGroup::Id>
     Description: Assign Security Groups to the Primary Vault instance.
