--- a/aws/PAS-Component-Single-Deployment.yaml
+++ b/aws/PAS-Component-Single-Deployment.yaml
@@ -807,8 +807,8 @@ Parameters:
   ComponentHostName:
     Type: String
     Description: Enter the host name for the PAS Component instance.
-    AllowedPattern: ^([a-zA-Z0-9][a-zA-Z0-9\-.]{2,14})
-    ConstraintDescription:  Hostname must include 3-15 characters, only alphanumeric characters, dashes and dots are allowed.
+    AllowedPattern: ^([a-zA-Z0-9][a-zA-Z0-9\-]{2,14})
+    ConstraintDescription:  Hostname must include 3-15 characters, only alphanumeric characters and hyphens are allowed.
     MinLength: 3
   ComponentInstanceType:
     Type: String
