--- a/aws/PAS-Component-Single-Deployment.yaml
+++ b/aws/PAS-Component-Single-Deployment.yaml
@@ -808,7 +808,7 @@ Parameters:
     Type: String
     Description: Enter the host name for the PAS Component instance.
     AllowedPattern: ^([a-zA-Z0-9][a-zA-Z0-9\-]{2,14})
-    ConstraintDescription:  Hostname must include 3-15 characters, only alphanumeric characters and hyphens are allowed.
+    ConstraintDescription:  Hostname can include letters (A-Z and a-z), numbers (0-9), and dashes (-).
     MinLength: 3
   ComponentInstanceType:
     Type: String
