--- a/aws/PAS-Component-Single-Deployment.yaml
+++ b/aws/PAS-Component-Single-Deployment.yaml
@@ -669,7 +669,7 @@ Resources:
           #!/bin/bash -e
 
           /opt/aws/bin/cfn-init -v --stack ${AWS::StackName} --resource
-          PSMPMachine --configsets ascending --region ${AWS::Region}
+          PSMPMachine --configsets install_all --region ${AWS::Region}
 
           /opt/aws/bin/cfn-signal -e $? --stack ${AWS::StackName} --resource
           PSMPMachine --region ${AWS::Region}
@@ -678,117 +678,86 @@ Resources:
     Metadata:
       'AWS::CloudFormation::Init':
         configSets:
-          ascending:
-            - update_ssmagent
-            - install_cwlogs
+          install_all:
+            - install_logs
             - install_psmp
-        update_ssmagent:
-          commands:
-            01_download_ssmagent_update:
-              command: >-
-                sudo yum install -y
-                https://s3.amazonaws.com/ec2-downloads-windows/SSMAgent/latest/linux_amd64/amazon-ssm-agent.rpm
-              ignoreErrors: true
-              waitAfterCompletion: 0
-        install_cwlogs:
+        install_logs:
           files:
-            /etc/awslogs/awslogs.conf:
+            /opt/aws/amazon-cloudwatch-agent/bin/config.json:
               content: !Sub |
-                [general]
-                state_file= /var/lib/awslogs/state/agent-state
-                [/var/log/cloud-init.log]
-                file = /var/log/cloud-init.log
-                log_group_name = ${LogGroup}
-                log_stream_name = {instance_id}/cloud-init.log
-                datetime_format =
-                [/var/log/cloud-init-output.log]
-                file = /var/log/cloud-init-output.log
-                log_group_name = ${LogGroup}
-                log_stream_name = {instance_id}/cloud-init-output.log
-                datetime_format =
-                [/var/log/cfn-init.log]
-                file = /var/log/cfn-init.log
-                log_group_name = ${LogGroup}
-                log_stream_name = {instance_id}/cfn-init.log
-                datetime_format =
-                [/var/log/cfn-wire.log]
-                file = /var/log/cfn-wire.log
-                log_group_name = ${LogGroup}
-                log_stream_name = {instance_id}/cfn-wire.log
-                datetime_format =
-              mode: '000444'
-              owner: root
-              group: root
-            /etc/awslogs/awscli.conf:
-              content: !Sub |
-                [plugins]
-                cwlogs = cwlogs
-                [default]
-                region = ${AWS::Region}
+                {
+                  "agent": {
+                    "metrics_collection_interval": 10,
+                    "logfile": "/opt/aws/amazon-cloudwatch-agent/logs/amazon-cloudwatch-agent.log",
+                    "run_as_user": "root"
+                  },
+                  "logs": {
+                    "logs_collected": {
+                      "files": {
+                        "collect_list": [
+                          {
+                            "file_path": "/var/log/cloud-init.log",
+                            "log_group_name": "${LogGroup}",
+                            "log_stream_name": "PSMSSHMachine/cloud-init",
+                            "timezone": "Local",
+                            "timestamp_format": "%Y-%m-%dT%H:%M:%S"
+                          },
+                          {
+                            "file_path": "/var/log/cloud-init-output.log",
+                            "log_group_name": "${LogGroup}",
+                            "log_stream_name": "PSMSSHMachine/cloud-init-output",
+                            "timezone": "Local",
+                            "timestamp_format": "%Y-%m-%dT%H:%M:%S"
+                          },
+                          {
+                            "file_path": "/var/log/cfn-init.log",
+                            "log_group_name": "${LogGroup}",
+                            "log_stream_name": "PSMSSHMachine/cfn-init",
+                            "timezone": "Local",
+                            "timestamp_format": "%Y-%m-%dT%H:%M:%S"
+                          },
+                          {
+                            "file_path": "/tmp/temp/EnvManager.log",
+                            "log_group_name": "${LogGroup}",
+                            "log_stream_name": "PSMSSHMachine/EnvManager",
+                            "timezone": "Local",
+                            "timestamp_format": "%Y-%m-%dT%H:%M:%S"
+                          },
+                          {
+                            "file_path": "/var/opt/CARKpsmp/temp/PSMPHardening_log.txt",
+                            "log_group_name": "${LogGroup}",
+                            "log_stream_name": "PSMSSHMachine/PSMPHardening_log",
+                            "timezone": "Local",
+                            "timestamp_format": "%Y-%m-%dT%H:%M:%S"
+                          }
+                        ]
+                      }
+                    }
+                  }
+                }
               mode: '000444'
               owner: root
               group: root
           commands:
-            01_create_state_directory:
-              command: mkdir -p /var/lib/awslogs/state
-              waitAfterCompletion: 0
-            02_start_awslogsd:
-              command: systemctl start awslogsd
-            03_enable_awslogsd:
-              command: systemctl enable awslogsd
+            01_install_cwlogs:
+              command: yum install -y https://s3.amazonaws.com/amazoncloudwatch-agent/redhat/amd64/latest/amazon-cloudwatch-agent.rpm
+            02_start_awslogs:
+              command: sudo /opt/aws/amazon-cloudwatch-agent/bin/amazon-cloudwatch-agent-ctl -a fetch-config -m ec2 -c file:/opt/aws/amazon-cloudwatch-agent/bin/config.json -s
         install_psmp:
-          files:
-            /root/CD-Image/preinstall.sh:
-              content: |-
-                #!/bin/bash -e
-
-                hostname $1
-
-                sed -i "s/localhost\\./$1./g" /etc/hosts
-
-                sed -i "s/localhost /$1 /g" /etc/hosts
-
-                chmod 646 /etc/sysconfig/network
-                sed -i "s/HOSTNAME=localhost.localdomain/HOSTNAME=$1/g" \
-                /etc/sysconfig/network
-
-                chmod 644 /etc/hosts
-
-                chmod 644 /etc/sysconfig/network
-            /root/CD-Image/createCredFile.sh:
-              content: |-
-                #!/bin/bash -e
-                adminpassword=`aws ssm get-parameters --names $2 --region $3 \
-                --with-decryption --output text --query Parameters[0].Value`
-                /opt/CARKpsmp/bin/createcredfile /root/CD-Image/user.cred \
-                Password -Username $1 -Password $adminpassword -EntropyFile
           commands:
-            1-ScriptsPermissions:
-              command: >-
-                sudo chmod 700 /root/CD-Image/preinstall.sh
-                /root/CD-Image/createCredFile.sh
-              waitAfterCompletion: 0
-            2-PreInstall:
-              command: !Sub >
-                sudo /root/CD-Image/preinstall.sh ${ComponentHostName}
-                waitAfterCompletion: 0
-            3-CreateCredFile:
-              command: !Sub >
-                sudo /root/CD-Image/createCredFile.sh ${VaultAdminUser}
-                ${StoreAdminPassword.SsmId} ${AWS::Region} ${ComponentHostName}
-                waitAfterCompletion: 0
-            4-PSMPdeploy:
-              command: !Sub
-                - >-
-                  hostname=`curl
-                  http://169.254.169.254/latest/meta-data/instance-id` &&
-                  /root/CD-Image/register_and_activation.sh
-                  /root/CD-Image/user.cred ${VaultIpAddress} $hostname y
-                - VaultIpAddress: !If
-                    - DRValueEmpty
-                    - !Sub '${VaultPrivateIP}'
-                    - !Sub '${VaultPrivateIP},${DRPrivateIP}'
-              waitAfterCompletion: 0
+            01-PSMPdeploy:
+              command:
+                'Fn::Sub':
+                  - >-
+                    /opt/CD-Image/register_and_activation.sh
+                    Administrator "${VaultAdminPassword}" "${VaultIpAddress}" $(curl
+                    http://169.254.169.254/latest/meta-data/instance-id) ec2-user
+                  - VaultIpAddress: !Sub '${VaultPrivateIP},${DRPrivateIP}'
+            02-PostInstall:
+              command: sudo rm -rf /opt/CD-Image/
+            99-SignalCompletion:
+              command: !Sub >-
+                /opt/aws/bin/cfn-signal -e $? --stack ${AWS::StackId} --resource PSMPMachine --region ${AWS::Region}
     Condition: CreatePSMPCondition
     CreationPolicy:
       ResourceSignal:
@@ -838,6 +807,9 @@ Parameters:
   ComponentHostName:
     Type: String
     Description: Enter the host name for the PAS Component instance.
+    AllowedPattern: ^([a-zA-Z0-9][a-zA-Z0-9\-]{2,14})
+    ConstraintDescription:  Hostname can include letters (A-Z and a-z), numbers (0-9), and dashes (-).
+    MinLength: 3
   ComponentInstanceType:
     Type: String
     Description: Select the instance type of the Component instance.
@@ -938,97 +910,97 @@ Mappings:
       CPM: ami-0fa7235fdca4af459
       PVWA: ami-09a0ba13eec5c1673
       PSM: ami-08c60f686d5fe1b13
-      PSMP: ami-02c0f96793391c22e
+      PSMP: ami-003a5a6bc08e54a42
     us-east-2:
       CPM: ami-02d94af9afc444571
       PVWA: ami-0d94d81b6abe18189
       PSM: ami-08af892587cfdd13a
-      PSMP: ami-07111cc368840b22c
+      PSMP: ami-04aac251f0c47b56e
     eu-west-2:
       CPM: ami-0331d6a1ed8a049a8
       PVWA: ami-042941065ee81a59a
       PSM: ami-074fbecca986d1b2b
-      PSMP: ami-0664054848d7e0dbd
+      PSMP: ami-0d16f5b177ad4fd88
     eu-west-3:
       CPM: ami-0b264e7217b403c0d
       PVWA: ami-04c4b7bb2b12b04b6
       PSM: ami-05fb930a696363322
-      PSMP: ami-0d2d1e511a4e264d1
+      PSMP: ami-04931ce89c5795205
     eu-north-1:
       CPM: ami-0d55ff73f37d312bb
       PVWA: ami-0aa5d54d0ff86230d
       PSM: ami-0bd1bf1c86ee5c1a5
-      PSMP: ami-08c24ced7b62686db
+      PSMP: ami-08bda36cb9be2a792
     us-west-1:
       CPM: ami-059ecb8c9757f0ecf
       PVWA: ami-061104d049b5629a7
       PSM: ami-0e75dfebc0e1be53e
-      PSMP: ami-0f3153752d2d9e8de
+      PSMP: ami-0c118a57d08238e3c
     us-west-2:
       CPM: ami-07ca14fdf238ac8e5
       PVWA: ami-0f2bf0eb42881283a
       PSM: ami-0fed7e9dc82cc8162
-      PSMP: ami-0cdb64214c34682f6
+      PSMP: ami-0886b07765cb75df9
     ca-central-1:
       CPM: ami-009404793983186f3
       PVWA: ami-09bc016d230377c41
       PSM: ami-03326e1d251c4cf95
-      PSMP: ami-0389581abb34a7abe
+      PSMP: ami-03a091a1904f26e6a
     eu-west-1:
       CPM: ami-0701c8444eab04c4a
       PVWA: ami-09181fbdc505af43b
       PSM: ami-040fd517999f6cd27
-      PSMP: ami-08ac861dee64cf090
+      PSMP: ami-06269f3854f9d8059
     eu-central-1:
       CPM: ami-0b795537046186073
       PVWA: ami-0b103939a7cf9bfa3
       PSM: ami-0f317a8c4a354fa81
-      PSMP: ami-00cf9d94978df90b1
+      PSMP: ami-05f379bcf2cf8b4dd
     ap-southeast-1:
       CPM: ami-0b608b26490a083be
       PVWA: ami-0d7b67684a73a6fee
       PSM: ami-0b4b9bd4c4f503f01
-      PSMP: ami-08703d4455e743d1d
+      PSMP: ami-0ab988d079cd46fb1
     ap-southeast-2:
       CPM: ami-0e083a68e91d54a46
       PVWA: ami-067663fa87473933e
       PSM: ami-0cca19b9f0f237e3c
-      PSMP: ami-0610dcf1d56bf03eb
+      PSMP: ami-006f26da459d3f251
     ap-northeast-2:
       CPM: ami-0b0a26bf47d607bd3
       PVWA: ami-0d0a01797bfed97e2
       PSM: ami-0f65e94ea97339dae
-      PSMP: ami-008c6bfcfa35bdb82
+      PSMP: ami-0380eac3ebd55d940
     ap-northeast-1:
       CPM: ami-09ff7cc884cb144f5
       PVWA: ami-0957ffdbb46fb9c73
       PSM: ami-05df62135cff20a2d
-      PSMP: ami-075ceb9c5f2897800
+      PSMP: ami-0dd36f927055d19e9
     ap-south-1:
       CPM: ami-0f77618dc0c265430
       PVWA: ami-0ddf80dd635074687
       PSM: ami-0de477e2db3dedbbc
-      PSMP: ami-0fb2655b2a806004e
+      PSMP: ami-06c4be35291fd4c1d
     sa-east-1:
       CPM: ami-0fd41ecec8d29ffd2
       PVWA: ami-0caa7b0990467a0c5
       PSM: ami-0da1fe71a548811c4
-      PSMP: ami-02d26663b92382528
+      PSMP: ami-03985e4959bc93409
     me-south-1:
       CPM: ami-0cf04a8445834b34e
       PVWA: ami-0f22410e004aec692
       PSM: ami-09ca4caa674c25d3a
-      PSMP: ami-0f26186e21eabdb45
+      PSMP: ami-09aa4b2943b9d83c2
     us-gov-west-1:
       CPM: ami-01a1d4653ffdfa908
       PVWA: ami-00fb3ba40bc5ef3b1
       PSM: ami-0531d46ff83b09a88
-      PSMP: ami-09e30a08f31d8867c
+      PSMP: ami-07061e4b64d89bb63
     us-gov-east-1:
       CPM: ami-0b8f222b3e7fa55eb
       PVWA: ami-092040fe63dd0324f
       PSM: ami-063aa2d042f07a965
-      PSMP: ami-0a41374ef903a19ed
+      PSMP: ami-0bf7ad208070f8290
 Outputs:
   CloudWatchLogGroupName:
     Description: The name of the CloudWatch log group
