Win 19 patch poc51 fix (#330)
* Develop (#305)

* Release v11.6 - develop (#258)

* Fix azure vault paramerter (#253)
* release v'11.6'

* Release v12.0 - master (#267)

* release v'12.0'

* Release v12.1 (#271)

* release v'12.1'

* Update PTA-Single-Deployment.json (#277)

* Create PTA-Single-Deployment.yaml (#280)

Convert json to yaml

* Update PTA-Single-Deployment.yaml (#281)

Remove unneeded resources and scripts.
Customised for version 12.2+

* Release v12.2


* Update DRVault-Single-Deployment.yaml

* Update Full-PAS-Deployment.yaml

* Update PAS-AIO-DR-Deployment.yaml

* Update PAS-Component-Single-Deployment.yaml

* Update PTA-Single-Deployment.yaml

* Update Vault-Single-Deployment.yaml

* Change PSMP credfile command

* Change PSMP credfile command

* Update PAS-Component-Single-Deployment.yaml

* Update PAS-Component-Single-Deployment.yaml

* Update Full-PAS-Deployment.yaml

* Update PAS-Component-Single-Deployment.yaml

* Update PAS-Component-Single-Deployment.yaml

* release v12.2

* Update PAS-Component-Single-Deployment.yaml

* Update Full-PAS-Deployment.yaml

* Update PTA-Single-Deployment.yaml

Co-authored-by: Erez Samimi <erez.shirn@gmail.com>
Co-authored-by: Auto Commit From aws-ami-create <ILCloudInitiatives@cyberark.com>

* Release v12.2.1 (#285)

* release v12.2.1

Co-authored-by: Erez Samimi <erez.shirn@gmail.com>
Co-authored-by: Auto Commit From aws-ami-create <ILCloudInitiatives@cyberark.com>

* Release v12.2.2 (#291)

* Fix azure vault paramerter (#253)

* release v'11.6'

* release v'11.6'

* release v'11.6'

* Release v11.7 (#260)

* release v'11.7'

* Release v12.0 (#269)

* release v'12.0'

* Release v12.1 (#272)

Release v12.1

* Update DRVault-Single-Deployment.yaml

* Update Full-PAS-Deployment.yaml

* Update PAS-AIO-DR-Deployment.yaml

* Update PAS-Component-Single-Deployment.yaml

* Update PTA-Single-Deployment.yaml

* Update

--- a/aws/PAS-Component-Single-Deployment.yaml
+++ b/aws/PAS-Component-Single-Deployment.yaml
@@ -334,7 +334,7 @@ Resources:
                   "Images": []
               }
 
-              pas_ver_without_os_filter = ['11.5','11.6','11.7','12.0','12.1']
+              pas_ver_without_os_filter = ['11.5','11.6','11.7','12.0','12.1','12.2']
               os_filter = '' if pas_ver in pas_ver_without_os_filter else \
               event['ResourceProperties']['OS']
               
@@ -832,9 +832,9 @@ Resources:
               command:
                 'Fn::Sub':
                   - >-
-                    /opt/CD-Image/register_and_activation.sh
-                    Administrator "${VaultAdminPassword}" "${VaultIpAddress}" $(curl
-                    http://169.254.169.254/latest/meta-data/instance-id) ec2-user
+                    /opt/CD-Image/register_prep.sh
+                    Administrator "${StoreAdminPassword.SsmId}" ${AWS::Region} "${VaultIpAddress}" $(curl
+                    http://169.254.169.254/latest/meta-data/instance-id) ec2-user 
                   - VaultIpAddress: !Sub '${VaultPrivateIP},${DRPrivateIP}'
             02-PostInstall:
               command: sudo rm -rf /opt/CD-Image/
@@ -858,13 +858,14 @@ Parameters:
     Type: String
     Description: Select an official CyberArk PAS release version.
     AllowedValues:
+      - '12.6'
       - '12.2'
       - '12.1'
       - '12.0'
       - '11.7'
       - '11.6'
       - '11.5'
-    Default: '12.2'
+    Default: '12.6'
   WinVersion:
     Type: String
     Description: Select a Windows Server version for all Windows-based components (field ignored for PSMP).
@@ -949,7 +950,7 @@ Rules:
           - Win2016
         - !Not
           - 'Fn::Contains':
-            - ['11.5','11.6','11.7','12.0','12.1']
+            - ['11.5','11.6','11.7','12.0','12.1','12.2']
             - !Ref ReleaseVersion
         AssertDescription: The selected versions are not compatible.
 Metadata:
